# matrix-bot-mikrotik

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: build.yml  ci.yml
bot/: bot.py  pyproject.toml
config/: config_example.yaml
docker/: Dockerfile  mikrotik_entrypoint.sh
